--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.jpa.properties.hibernate.format_sql =true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.SQLServerDialect
 server.servlet.context-path=/api/v1
+server.port=8080
+
+
+
 
